# dbt-microservice

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/dbt/: README_config.md  config.py
app/dbt/config/: config.py
app/dbt/config/jsonschema/: __init__.py  dbt-run.yml  dbt-seed.yml  dbt-snapshot.yml  dbt-test.yml  global.yml
app/dbt/config/providers/: __init__.py  abc.py  environment.py  file.py  ini_file.py
app/dbt/config/providers/defaults/: __init__.py
app/dbt/config/providers/defaults/flag_allowlists/: dbt-run.yml  dbt-test.yml
app/dbt/flags_default_allowlists/: dbt-seed.yml  dbt-snapshot.yml  shared.yml
app/dbt/flags_jsonschema/: dbt-run.yml  dbt-seed.yml  dbt-snapshot.yml  dbt-test.yml  shared.yml
app/utils/: bool.py
tests/: conftest.py
tests/app/dbt/: test_config.py
tests/app/dbt/config/: test_errors.py
tests/app/dbt/config/providers/: test___init__.py  test_abc.py  test_environment.py  test_file.py  test_ini_file.py
tests/app/dbt/config/providers/defaults/: test__init__.py
tests/app/utils/: test_bool.py
tests/fixtures/: configparser.py  mock_env.py
